<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#15273C">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:background="#15253F">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="#E8F2FB"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="216dp"
            android:layout_height="106dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/aso_logo" />

        <Button

            android:text="@string/subject1"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-50dp"
            android:backgroundTint="#365475"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject1_desc"
            android:textColor="#171B1A"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="165dp"
            android:textSize="15sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="216dp"
            android:layout_height="106dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/entorns3D" />

        <Button
            android:id="@+id/subject2"
            android:text="@string/subject2"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-50dp"
            android:backgroundTint="#365475"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject1_desc"
            android:textColor="#171B1A"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="165dp"
            android:textSize="15sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="216dp"
            android:layout_height="106dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/java" />

        <Button
            android:id="@+id/subject3"
            android:text="@string/subject3"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="-50dp"
            android:backgroundTint="#365475"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject1_desc"
            android:textColor="#171B1A"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="165dp"
            android:textSize="15sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:background="#15273C">
    </FrameLayout>

</LinearLayout>